--- a/assets/css/templatemo-breezed.css
+++ b/assets/css/templatemo-breezed.css
@@ -22,10 +22,64 @@ font & reset css
 reset
 --------------------------------------------- 
 */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
-pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
-s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-figure, header, nav, section, article, aside, footer, figcaption {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+div pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+figure,
+header,
+nav,
+section,
+article,
+aside,
+footer,
+figcaption {
   margin: 0;
   padding: 0;
   border: 0;
@@ -53,13 +107,20 @@ html[xmlns] .clearfix {
   height: 1%;
 }
 
-ul, li {
+ul,
+li {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-header, nav, section, article, aside, footer, hgroup {
+header,
+nav,
+section,
+article,
+aside,
+footer,
+hgroup {
   display: block;
 }
 
@@ -67,8 +128,9 @@ header, nav, section, article, aside, footer, hgroup {
   box-sizing: border-box;
 }
 
-html, body {
-  font-family: 'Raleway', sans-serif;
+html,
+body {
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
   background-color: #fff;
   font-size: 16px;
@@ -81,7 +143,12 @@ a {
   text-decoration: none !important;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -103,7 +170,7 @@ global styles
 html,
 body {
   background: #fff;
-  font-family: 'Gothic A1';
+  font-family: "Gothic A1";
 }
 
 ::selection {
@@ -117,7 +184,8 @@ body {
 }
 
 @media (max-width: 991px) {
-  html, body {
+  html,
+  body {
     overflow-x: hidden;
   }
   .mobile-top-fix {
@@ -280,7 +348,6 @@ a.text-button-icon:hover i {
   padding-left: 5px;
 }
 
-
 .section-heading h6 {
   font-size: 15px;
   font-weight: 500;
@@ -298,7 +365,6 @@ a.text-button-icon:hover i {
   margin-bottom: 0px;
 }
 
-
 /* 
 ---------------------------------------------
 header
@@ -307,25 +373,25 @@ header
 
 .background-header {
   background-color: #fff;
-  height: 80px!important;
-  position: fixed!important;
+  height: 80px !important;
+  position: fixed !important;
   top: 0px;
   left: 0px;
   right: 0px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.15)!important;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15) !important;
 }
 
 .background-header .logo,
 .background-header .main-nav .nav li a {
-  color: #1e1e1e!important;
+  color: #1e1e1e !important;
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: pink!important;
+  color: pink !important;
 }
 
 .background-header .nav li a.active {
-  color: pink!important;
+  color: pink !important;
 }
 
 .header-area {
@@ -335,10 +401,10 @@ header
   right: 0px;
   z-index: 100;
   height: 100px;
-  -webkit-transition: all .5s ease 0s;
-  -moz-transition: all .5s ease 0s;
-  -o-transition: all .5s ease 0s;
-  transition: all .5s ease 0s;
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header-area .main-nav {
@@ -359,7 +425,6 @@ header
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
-
 
 .header-area .main-nav .nav {
   float: right;
@@ -406,7 +471,7 @@ header
 
 .header-area .main-nav .nav .search-icon a:hover {
   opacity: 1;
-  color: pink!important;
+  color: pink !important;
 }
 
 .header-area .main-nav .nav li a {
@@ -431,13 +496,13 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #fff!important;
+  color: #fff !important;
   opacity: 0.5;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: pink!important;
+  color: pink !important;
   opacity: 1;
 }
 
@@ -470,7 +535,8 @@ header
   transform: translateY(+2em);
   visibility: hidden;
   z-index: -1;
-  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s,
+    z-index 0s linear 0.01s;
 }
 
 .header-area .main-nav .nav li.submenu ul li {
@@ -483,7 +549,7 @@ header
   opacity: 1;
   display: block;
   background: #fff;
-  color: #7a7a7a!important;
+  color: #7a7a7a !important;
   padding-left: 20px;
   height: 40px;
   line-height: 40px;
@@ -498,7 +564,7 @@ header
 
 .header-area .main-nav .nav li.submenu ul li a:hover {
   background: #fff;
-  color: pink!important;
+  color: pink !important;
   padding-left: 25px;
 }
 
@@ -653,7 +719,7 @@ header
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: pink!important;
+    color: pink !important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -711,7 +777,7 @@ header
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
-    color: pink!important;
+    color: pink !important;
   }
   .header-area .main-nav .nav li.submenu ul {
     position: relative;
@@ -736,12 +802,13 @@ header
     height: auto !important;
   }
   .header-area .main-nav .nav li.submenu:after {
-    color: #3B566E;
+    color: #3b566e;
     right: 25px;
     font-size: 14px;
     top: 15px;
   }
-  .header-area .main-nav .nav li.submenu:hover ul, .header-area .main-nav .nav li.submenu:focus ul {
+  .header-area .main-nav .nav li.submenu:hover ul,
+  .header-area .main-nav .nav li.submenu:focus ul {
     height: 0px;
   }
 }
@@ -752,19 +819,18 @@ header
   }
 }
 
-
 /* 
 ---------------------------------------------
 banner
 --------------------------------------------- 
 */
 /* ==== Main CSS === */
-.img-fill{
+.img-fill {
   width: 100%;
   display: block;
   overflow: hidden;
   position: relative;
-  text-align: center
+  text-align: center;
 }
 
 .img-fill img {
@@ -793,59 +859,59 @@ banner
 .blocks-box,
 .slick-slider {
   margin: 0;
-  padding: 0!important;
+  padding: 0 !important;
 }
 
 .slick-slide {
-  float: left /* If RTL Make This Right */ ;
+  float: left /* If RTL Make This Right */;
   padding: 0;
 }
 
 /* ==== Slider Style === */
-.Modern-Slider .item .img-fill{
-  height:95vh;
-  background:#000;
+.Modern-Slider .item .img-fill {
+  height: 95vh;
+  background: #000;
 }
 
-.Modern-Slider .item .info > div{
-  display:inline-block!important;
-  vertical-align:middle;
+.Modern-Slider .item .info > div {
+  display: inline-block !important;
+  vertical-align: middle;
 }
 
-.Modern-Slider .NextArrow{
-  position:absolute;
-  top:50%;
-  right:30px;
-  border:0 none;
+.Modern-Slider .NextArrow {
+  position: absolute;
+  top: 50%;
+  right: 30px;
+  border: 0 none;
   background-color: transparent;
-  text-align:center;
+  text-align: center;
   font-size: 36px;
-  font-family: 'FontAwesome';
-  color:#FFF;
-  z-index:5;
+  font-family: "FontAwesome";
+  color: #fff;
+  z-index: 5;
   outline: none;
 }
 
-.Modern-Slider .NextArrow:before{
-  content:'\f105';
+.Modern-Slider .NextArrow:before {
+  content: "\f105";
 }
 
 .Modern-Slider .PrevArrow {
-  position:absolute;
-  top:50%;
-  left:30px;
-  border:0 none;
+  position: absolute;
+  top: 50%;
+  left: 30px;
+  border: 0 none;
   background-color: transparent;
-  text-align:center;
+  text-align: center;
   font-size: 36px;
-  font-family: 'FontAwesome';
-  color:#FFF;
-  z-index:5;
+  font-family: "FontAwesome";
+  color: #fff;
+  z-index: 5;
   outline: none;
 }
 
-.Modern-Slider .PrevArrow:before{
-  content:'\f104';
+.Modern-Slider .PrevArrow:before {
+  content: "\f104";
 }
 
 .scroll-down {
@@ -865,11 +931,11 @@ banner
   line-height: 60px;
   border-radius: 50%;
   color: #fff;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 ul.slick-dots {
-  display: none!important;
+  display: none !important;
 }
 
 .Modern-Slider .text-content {
@@ -886,8 +952,8 @@ ul.slick-dots {
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 1px;
-  color:#FFF;
-  animation:fadeOutRight 1s both;
+  color: #fff;
+  animation: fadeOutRight 1s both;
 }
 
 .Modern-Slider .item h5 {
@@ -895,47 +961,105 @@ ul.slick-dots {
   font-size: 36px;
   font-weight: 200;
   letter-spacing: 2.5px;
-  color:#FFF;
-  overflow:hidden;
-  animation:fadeOutLeft 1s both;
+  color: #fff;
+  overflow: hidden;
+  animation: fadeOutLeft 1s both;
 }
 
 .Modern-Slider .item a {
   margin: 0 5px;
 }
 
-.Modern-Slider .item.slick-active h3{
-  animation:fadeInDown 1s both 1s;
+.Modern-Slider .item.slick-active h3 {
+  animation: fadeInDown 1s both 1s;
 }
 
-.Modern-Slider .item.slick-active h5{
-  animation:fadeInLeft 1s both 1.5s;
+.Modern-Slider .item.slick-active h5 {
+  animation: fadeInLeft 1s both 1.5s;
 }
 
-.Modern-Slider .item.slick-active{
-  animation:Slick-FastSwipeIn 1s both;
+.Modern-Slider .item.slick-active {
+  animation: Slick-FastSwipeIn 1s both;
 }
 
 .Modern-Slider .buttons {
   position: relative;
 }
 
-.Modern-Slider {background:#000;}
-
+.Modern-Slider {
+  background: #000;
+}
 
 /* ==== Slick Slider Css Ruls === */
-.slick-slider{position:relative;display:block;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-touch-callout:none;-khtml-user-select:none;-ms-touch-action:pan-y;touch-action:pan-y;-webkit-tap-highlight-color:transparent}
-.slick-list{position:relative;display:block;overflow:hidden;margin:0;padding:0}
-.slick-list:focus{outline:none}.slick-list.dragging{cursor:hand}
-.slick-slider .slick-track,.slick-slider .slick-list{-webkit-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}
-.slick-track{position:relative;top:0;left:0;display:block}
-.slick-track:before,.slick-track:after{display:table;content:''}.slick-track:after{clear:both}
-.slick-loading .slick-track{visibility:hidden}
-.slick-slide{display:none;float:left /* If RTL Make This Right */ ;height:100%;min-height:1px}
-.slick-slide.dragging img{pointer-events:none}
-.slick-initialized .slick-slide{display:block}
-.slick-loading .slick-slide{visibility:hidden}
-.slick-vertical .slick-slide{display:block;height:auto;border:1px solid transparent}
+.slick-slider {
+  position: relative;
+  display: block;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+.slick-list:focus {
+  outline: none;
+}
+.slick-list.dragging {
+  cursor: hand;
+}
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+}
+.slick-track:before,
+.slick-track:after {
+  display: table;
+  content: "";
+}
+.slick-track:after {
+  clear: both;
+}
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+.slick-slide {
+  display: none;
+  float: left /* If RTL Make This Right */;
+  height: 100%;
+  min-height: 1px;
+}
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+.slick-initialized .slick-slide {
+  display: block;
+}
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
 
 /*
 ---------------------------------------------
@@ -961,11 +1085,6 @@ about
   align-items: center;
   text-align: center;
 }
-
-
-
-
-
 
 /* 
 ---------------------------------------------
